--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,7 +56,7 @@ jobs:
             fi
             echo "Found new JAR file: $JAR_FILE"
             sudo systemctl stop my-app.service
-            sudo mv "$JAR_FILE" /home/ubuntu/app.jar
+            sudo mv "$JAR_FILE" /home/ubuntu/aoi-0.0.1-SNAPSHOT.jar 
             echo "New JAR file deployed."
             sudo systemctl restart my-app.service
             echo "Service restarted successfully."
