프록시(로드 밸런서)의 헤더 정보를 신뢰하고 리다이렉트 URI를 만들도록 설정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=aoi
 
+server.forward-headers-strategy=native
+
 # --- DB Settings ---
 spring.datasource.url=jdbc:oracle:thin:@${DB_NAME}?TNS_ADMIN=${WALLET_URI}
 spring.datasource.username=ADMIN
