--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=aoi
 
 server.forward-headers-strategy=native
+logging.level.org.springframework.security.oauth2=DEBUG
 
 # --- DB Settings ---
 spring.datasource.url=jdbc:oracle:thin:@${DB_NAME}?TNS_ADMIN=${WALLET_URI}
